--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,10 @@ a {
   color: #434455;
 }
 .nav-link:hover,
-.nav-link:focus,
+.nav-link:focus {
+  color: #404bbf;
+}
+
 .contacts-link:hover,
 .contacts-link:focus {
   color: #404bbf;
@@ -49,10 +52,10 @@ a {
 .hero {
   background-color: #2e2f42;
 }
-.hero .hero-title {
+.hero-title {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
@@ -65,6 +68,7 @@ a {
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
+  cursor: pointer;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -93,6 +97,11 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.team-list-item {
+  background-color: #ffffff;
 }
 .team-name-title {
   font-weight: 500;
@@ -116,6 +125,7 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
 }
 .portfolio-name-title {
@@ -145,5 +155,3 @@ a {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
-/*!-- для кнопок треба прописати стиль шрифту через фонт фемелі,
-бо інакше не успадкується */
