--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,43 @@ body {
   color: #434455;
   background-color: #fff;
 }
+/*reset*/
 ul,
 ol {
   list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 a {
   text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+/*common*/
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+/*header*/
+.page-header {
+  border-bottom: solid #e7e9fc;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -19,7 +50,11 @@ a {
   text-transform: uppercase;
   color: #4d5ae5;
 }
-
+.header-logo {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 76px;
+}
 .header-logo .logo-part {
   color: #2e2f42;
 }
@@ -29,11 +64,16 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
+  display: block;
 }
 .contacts {
   font-style: normal;
+  margin-left: auto;
 }
 .contacts-link {
+  padding: 24px 0;
+  display: block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -44,11 +84,23 @@ a {
   color: #404bbf;
 }
 
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.contacts-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 .contacts-link:hover,
 .contacts-link:focus {
   color: #404bbf;
 }
-
+/*hero*/
 .hero {
   background-color: #2e2f42;
 }
@@ -74,6 +126,19 @@ a {
 .hero-btn:focus {
   background-color: #404bbf;
 }
+
+.benefits-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.benefits-title {
+  opacity: 0;
+}
+.benefits-list {
+  display: flex;
+  width: calc(100% - 72px) / 4;
+  gap: 24px;
+}
 .benefits-item-title {
   font-weight: 500;
   font-size: 20px;
@@ -88,10 +153,21 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+.team-container {
+  display: block;
+  align-items: center;
+  padding: 120px 0;
+}
+.team-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
 .team {
   background-color: #f4f4fd;
 }
 .team-title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -119,7 +195,20 @@ a {
   text-align: center;
   color: #434455;
 }
+.portfolio-container {
+  display: block;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
+  align-items: center;
+}
 .portfolio-title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -142,16 +231,27 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
-
+/*footer*/
+.footer-container {
+  display: flex;
+  flex-direction: column;
+}
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
+}
 .footer-logo .logo-part {
   color: #f4f4fd;
 }
 .page-footer {
   background-color: #2e2f42;
+  padding: 120px 0;
 }
 .page-footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  display: inline-block;
+  max-width: 264px;
 }
