--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ p {
 }
 /*header*/
 .page-header {
-  border-bottom: solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 .header-container {
   display: flex;
@@ -102,6 +102,7 @@ p {
 }
 /*hero*/
 .hero {
+  padding: 188px 0;
   background-color: #2e2f42;
 }
 .hero-title {
@@ -111,6 +112,10 @@ p {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 .hero-btn {
   font-family: 'Roboto', sans-serif;
@@ -121,6 +126,12 @@ p {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  border-radius: 4px;
+  max-width: 169px;
+  height: 56px;
+  border: none;
 }
 .hero-btn:hover,
 .hero-btn:focus {
