--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ p {
   display: block;
   margin: 0 auto;
   border-radius: 4px;
-  max-width: 169px;
+  min-width: 169px;
   height: 56px;
   border: none;
 }
@@ -143,7 +143,7 @@ p {
   padding-bottom: 120px;
 }
 .benefits-title {
-  opacity: 0;
+  visibility: hidden;
 }
 .benefits-list {
   display: flex;
@@ -228,7 +228,19 @@ p {
   text-transform: capitalize;
   color: #2e2f42;
 }
+.project-card {
+  padding: 16px 0 0 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.portfolio-list-item {
+  display: block;
+  flex-basis: calc((100% - 48px) / 3);
+  box-sizing: border-box;
+}
 .portfolio-name-title {
+  padding: 16px 0 0 16px;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -236,6 +248,7 @@ p {
   color: #2e2f42;
 }
 .portfolio-name-text {
+  padding: 0 0 32px 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
