--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,12 @@ p {
 .team-list-item {
   background-color: #ffffff;
 }
+.team-img {
+  display: block;
+}
 .team-name-title {
+  padding: 32px 0 0 16px;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -204,6 +209,7 @@ p {
   color: #2e2f42;
 }
 .team-name-text {
+  padding: 0 0 32px 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
