--- a/css/style.css
+++ b/css/style.css
@@ -139,12 +139,6 @@ p {
 }
 
 .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
   overflow: hidden;
 }
 .benefits {
@@ -179,18 +173,21 @@ p {
   display: block;
   margin-top: 8px;
 }
+.team {
+  padding: 120px 0;
+  background-color: #f4f4fd;
+}
 .team-container {
   display: block;
   align-items: center;
-  padding: 120px 0;
 }
 .team-list {
   display: flex;
   gap: 24px;
   justify-content: center;
 }
-.team {
-  background-color: #f4f4fd;
+.team-card {
+  padding: 32px 0;
 }
 .team-title {
   margin-bottom: 72px;
@@ -203,18 +200,15 @@ p {
   color: #2e2f42;
 }
 .team-list-item {
+  width: calc((100% - 72px) / 4);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px 0px;
-  width: 264px;
-  height: 380px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background-color: #ffffff;
 }
+
 .team-img {
   display: block;
 }
