--- a/css/style.css
+++ b/css/style.css
@@ -137,10 +137,19 @@ p {
 .hero-btn:focus {
   background-color: #404bbf;
 }
-
 .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .benefits {
   padding: 120px 0;
 }
