--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ h6,
 p {
   margin: 0;
 }
+img {
+  display: block;
+}
 /*common*/
 .container {
   max-width: 1158px;
@@ -215,14 +218,14 @@ p {
   justify-content: center;
   flex-direction: column;
   border-radius: 0 0 4px 4px;
-  padding: 0px 0px 32px 0px;
+
+  background: #fff;
 }
 
 .team-img {
   display: block;
 }
 .team-name-title {
-  padding: 32px 0 0 16px;
   margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
@@ -232,7 +235,6 @@ p {
   color: #2e2f42;
 }
 .team-name-text {
-  padding: 0 0 32px 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
