--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ img {
 /*header*/
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -70,6 +72,22 @@ img {
   padding: 24px 0;
   display: block;
 }
+.nav-link.current {
+  position: relative;
+}
+.nav-link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .contacts {
   font-style: normal;
   margin-left: auto;
@@ -81,9 +99,13 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover,
-.nav-link:focus {
+.nav-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.nav-link.current {
   color: #404bbf;
 }
 
@@ -97,11 +119,6 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
-}
-
-.contacts-link:hover,
-.contacts-link:focus {
-  color: #404bbf;
 }
 /*hero*/
 .hero {
