--- a/css/style.css
+++ b/css/style.css
@@ -122,13 +122,18 @@ img {
 }
 /*hero*/
 .hero {
+  max-width: 1440px;
+  height: 600px;
   padding: 188px 0;
+  margin: 0 auto;
+  background-repeat: no-repeat;
   background-color: #2e2f42;
   background-image: linear-gradient(
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7),
-    url(/images/people-office.jpg)
-  );
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-size: cover;
 }
 .hero-title {
   font-weight: 700;
@@ -162,6 +167,7 @@ img {
 .hero-btn:focus {
   background-color: #404bbf;
 }
+/*benefits*/
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -174,7 +180,7 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-/*benefits*/
+
 .benefits {
   padding: 120px 0;
 }
@@ -235,7 +241,7 @@ img {
   width: calc((100% - 72px) / 4);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   border-radius: 0 0 4px 4px;
 
@@ -262,6 +268,32 @@ img {
   text-align: center;
   color: #434455;
 }
+.social-list {
+  display: flex;
+  justify-content: center;
+  flex-shrink: 0;
+  gap: 24px;
+}
+.social-list-item {
+  display: flex;
+}
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: #404bbf;
+}
+.link-svg {
+  fill: #fff;
+}
+
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -308,12 +340,14 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   background-color: #4d5ae5;
-  padding: 0 32px;
-  padding-top: 40px;
+  padding: 40px 32px;
   transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-item:hover .portfolio-overflow {
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list-item {
