--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,10 @@ img {
   color: #fff;
   margin-bottom: 16px;
 }
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
 .footer-social-link {
   display: flex;
   justify-content: center;
@@ -411,13 +415,16 @@ img {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: #31d0aa;
 }
-
+.link-svg {
+  fill: #f4f4fd;
+}
 .footer-container {
   display: flex;
   align-items: baseline;
