--- a/css/style.css
+++ b/css/style.css
@@ -244,8 +244,9 @@ img {
   justify-content: flex-start;
   flex-direction: column;
   border-radius: 0 0 4px 4px;
-
   background: #fff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-img {
@@ -276,13 +277,15 @@ img {
 }
 .social-list-item {
   display: flex;
+  width: 40px;
+  height: 40px;
 }
 .social-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
 }
@@ -291,9 +294,9 @@ img {
   background-color: #404bbf;
 }
 .link-svg {
-  fill: #fff;
+  fill: #f4f4fd;
 }
-
+/* #region portfolio */
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -327,13 +330,13 @@ img {
   position: relative;
   overflow: hidden;
 }
+
 .portfolio-overflow {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -346,6 +349,8 @@ img {
 }
 .portfolio-list-item:hover .portfolio-overflow {
   transform: translateY(0%);
+}
+.portfolio-list-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -372,7 +377,8 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
 }
-/*#region footer*/
+/* #endregion portfolio */
+/* #region footer */
 
 .footer-logo {
   display: inline-block;
@@ -422,7 +428,7 @@ img {
 .footer-social-link:focus {
   background-color: #31d0aa;
 }
-.link-svg {
+.footer-link-svg {
   fill: #f4f4fd;
 }
 .footer-container {
@@ -433,4 +439,4 @@ img {
   margin-right: 120px;
   margin-left: 156px;
 }
-/*#endregion footer*/
+/* #endregion footer */
