--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,7 @@ input {
 .footer-social-list {
   display: flex;
   gap: 16px;
+  margin-right: 80px;
 }
 .footer-social-link {
   display: flex;
@@ -486,12 +487,12 @@ input {
   gap: 24px;
 }
 .subscribe-input {
+  width: 264px;
+  height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-weight: 400;
   border: 1px solid #fff;
   border-radius: 4px;
-  width: 264px;
-  height: 40px;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
@@ -512,6 +513,7 @@ input {
   padding: 8px 24px;
   min-width: 165px;
   height: 40px;
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -538,8 +540,8 @@ input {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-  transition: visibility 300ms linear, opacity 300ms linear,
-    pointer-events 300ms linear;
+  transition: visibility 250ms linear, opacity 250ms linear,
+    pointer-events 250ms linear;
 }
 .backdrop.is-open {
   visibility: visible;
@@ -574,6 +576,7 @@ input {
   width: 24px;
   height: 24px;
   fill: #2e2f42;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -725,6 +728,7 @@ input {
   border: none;
   margin: 0 auto;
   display: block;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
