--- a/css/style.css
+++ b/css/style.css
@@ -518,11 +518,11 @@ input {
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  gap: 16px;
   border: none;
 }
 .footer-btn-svg {
   fill: #fff;
+  margin-left: 16px;
 }
 /* #endregion footer */
 /* #region modal overlay */
@@ -540,8 +540,8 @@ input {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-  transition: visibility 250ms linear, opacity 250ms linear,
-    pointer-events 250ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open {
   visibility: visible;
